# BehaviorTree.CPP

./: .appveyor.yml  .clang-format  .clang-tidy  .codespell_ignore_words  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.rst  CLAUDE.md  CMakeLists.ros2  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  CMakeSettings.json  CONTRIBUTORS_GUIDE.md  Doxyfile  FIXME.md  ISSUE_1041_RESPONSE.md  LICENSE  MigrationGuide.md  README.md  RoadmapDiscussion.md  annotated.html  annotated_dup.js  appveyor.yml  behaviortree_schema.xsd  classes.html  codecov.yml  conanfile.py  conanfile.txt  contributors.txt  convert_v3_to_v4.py  dir_0079e7ae641af117c6a457ee281e6635.html  dir_0079e7ae641af117c6a457ee281e6635.js  dir_0079e7ae641af117c6a457ee281e6635_dep.map  dir_0079e7ae641af117c6a457ee281e6635_dep.md5  dir_1573ea42ce800d213ff17f25e5e834ef.html  dir_1573ea42ce800d213ff17f25e5e834ef.js  dir_1573ea42ce800d213ff17f25e5e834ef_dep.map  dir_1573ea42ce800d213ff17f25e5e834ef_dep.md5  (+150 more)
.github/: FUNDING.yml  pull_request_template.md
BT_basics/: index.html
BlackBoard/: index.html
ControlNode/: index.html
ControlNodes/: index.html
DecoratorNode/: index.html
DecoratorNodes/: index.html
FallbackNode/: index.html
MigrationGuide/: index.html
NodeParameters/: index.html
SequenceNode/: index.html
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  behaviortree_cppConfig.cmake  cmake_install.cmake  compile_commands.json
btpy/: __init__.py
cmake/: Config.cmake.in  FindZMQ.cmake  FindZeroMQ.cmake  ament_build.cmake  behavior_tree_core-config.cmake.in  catkin_build.cmake  cmake_build.cmake  conan.cmake  conan_build.cmake  fuzzing_build.cmake  sanitizers.cmake
conan/: build.py
conf/: BTppConfig.cmake.in  BTppConfigVersion.cmake.in
docs/: 02_BT_description.md  BT_basics.md  DecoratorNode.md  FallbackNode.md  MigrationGuide.md  NodeParameters.md  PORT_CONNECTION_RULES.md  ParallelAll.md  SequenceNode.md  asynchronous_nodes.md  debugging_skins.md  example_01_legacy_wrap.md  getting_started.md  index.md  mainpage.md  name_validation_rules.md  pre_postconditions.md  sample_skin.json  substitution_sample.json  tutorial_01_first_tree.md  tutorial_02_basic_ports.md  tutorial_03_generic_ports.md  tutorial_04_sequence.md  (+18 more)
examples/: CMakeLists.txt  broken_sequence.cpp  crossdoor_dummy_nodes.h  crossdoor_example.cpp  dummy_nodes.h  ex01_wrap_legacy.cpp  ex02_runtime_ports.cpp  ex03_ncurses_manual_selector.cpp  ex03_sqlite_log.cpp  ex03_subtree_model.cpp  ex04_waypoints.cpp  ex05_subtree_model.cpp  ex06_access_by_ptr.cpp  ex08_sqlite_log.cpp  generate_log.cpp  movebase_node.h  simple_example.cpp  t01_build_your_first_tree.cpp  t01_programmatic_tree.cpp  t02_basic_ports.cpp  t02_factory_tree.cpp  t03_generic_ports.cpp  t03_sequence_star.cpp  t04_blackboard.cpp  t04_reactive_sequence.cpp  t04_sequence_star.cpp  t05_crossdoor.cpp  t06_subtree_port_remapping.cpp  t06_wrap_legacy.cpp  t07_include_trees.cpp  t07_load_multiple_xml.cpp  t07_subtree_port_remapping.cpp  t07_wrap_legacy.cpp  t08_additional_node_args.cpp  t08_async_actions_coroutines.cpp  t09_additional_node_args.cpp  t09_async_actions_coroutines.cpp  t09_include_trees.cpp  t09_scripting.cpp  t10_include_trees.cpp  (+26 more)
examples/plugin_example/: custom_type.hpp  plugin_action.cpp  plugin_executor.cpp
examples/test_files/: Check.xml  log_test.xml  subtree_test.xml
examples/test_files/subtrees/: Talk.xml
python/: .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
python/benchmarks/: README.md  baseline.json  bench_pybt.py  conftest.py
python/docs/: check_no_cpp_refs.py  conf.py  index.md
python/examples/: t01_build_your_first_tree.py  t02_basic_ports.py  t03_passing_data.py
python/src/_pybt/: bind_basic_types.cpp  bind_factory.cpp  bind_ports.cpp  bind_tree.cpp  bind_tree_node.cpp  exceptions.cpp  json_bridge.hpp  module.cpp
python/src/pybt/: __init__.py  exceptions.py  nodes.py
python/tests/: README.md  conftest.py  test_examples.py  test_lifecycle.py  test_smoke.py
sample_nodes/: CMakeLists.txt  crossdoor_nodes.cpp  crossdoor_nodes.h  dummy_nodes.cpp  dummy_nodes.h  movebase_node.cpp  movebase_node.h
tests/: CMakeLists.txt  groot2_test_utils.hpp  gtest_any.cpp  gtest_async_action_node.cpp  gtest_basic_types.cpp  gtest_blackboard.cpp  gtest_blackboard_precondition.cpp  gtest_blackboard_thread_safety.cpp  gtest_coroutines.cpp  gtest_decorator.cpp  gtest_duplicate_tree.cpp  gtest_enums.cpp  gtest_exception_tracking.cpp  gtest_factory.cpp  gtest_fallback.cpp  gtest_groot2_publisher.cpp  gtest_groot2_publisher_integration.cpp  gtest_groot2_publisher_thread_safety.cpp  gtest_if_then_else.cpp  gtest_interface.cpp  gtest_json.cpp  gtest_logger_zmq.cpp  gtest_loggers.cpp  gtest_loop.cpp  gtest_match.cpp  gtest_name_validation.cpp  gtest_parallel.cpp  gtest_plugin_issue953.cpp  gtest_polymorphic_ports.cpp  gtest_port_type_rules.cpp  gtest_ports.cpp  gtest_postconditions.cpp  gtest_preconditions.cpp  gtest_reactive.cpp  gtest_reactive_backchaining.cpp  gtest_reactive_fallback.cpp  gtest_reactive_sequence.cpp  gtest_reactive_tree.cpp  gtest_retry.cpp  gtest_sequence.cpp  (+15 more)
tests/export/: README.md
tests/export/ament_target_deps/: CMakeLists.txt  main.cpp
tests/export/target_link_libs/: CMakeLists.txt
tests/include/: action_test_node.h  animal_hierarchy_test.h  condition_test_node.h  environment.h  greeter_test.h
tests/plugin_issue953/: plugin_issue953.cpp
tests/src/: action_test_node.cpp  condition_test_node.cpp
tests/trees/: parent_include_child.xml  parent_include_child_include_child.xml  parent_include_child_include_parent.xml  parent_include_child_include_sibling.xml  parent_no_include.xml
tests/trees/child/: child_include_child.xml  child_include_parent.xml  child_include_sibling.xml  child_no_include.xml
tests/trees/child/child/: child_child_no_include.xml
tools/: CMakeLists.txt  bt_log_cat.cpp  bt_nodes_model.cpp  bt_plugin_manifest.cpp  bt_recorder.cpp  generate_schematron.cpp  generate_xsd.cpp  validate_xml.py
(+1401 files in other folders)
