<?xml version="1.0"?>
<package format="3">
  <name>behaviortree_cpp_v3</name>
  <version>3.5.0</version>
  <description>
  This package provides the Behavior Trees core library.
  </description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>

  <license>MIT</license>

  <author>Michele Colledanchise</author>
  <author>Davide Faconti</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roslib</depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>

  <depend>libzmq3-dev</depend>
  <depend>libncurses-dev</depend>

  <export>
      <build_type condition="$ROS_VERSION == 1">catkin</build_type>
      <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
