<?xml version="1.0"?>
<package format="3">
  <name>behaviortree_cpp</name>
  <version>4.7.2</version>
  <description>
  This package provides the Behavior Trees core library.
  </description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>

  <license>MIT</license>

  <author>Davide Faconti</author>

  <build_depend>ros_environment</build_depend>

  <buildtool_depend>git</buildtool_depend>
  <buildtool_depend >ament_cmake</buildtool_depend>

  <depend >rclcpp</depend>
  <depend >ament_index_cpp</depend>

  <depend>libsqlite3-dev</depend>
  <depend>libzmq3-dev</depend>

  <test_depend >ament_cmake_gtest</test_depend>

  <export>
      <build_type >ament_cmake</build_type>
  </export>

</package>
